--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,34 @@
-.DS_Store
-node_modules
 /build
 /.svelte-kit
 /package
 .env
 .env.*
 !.env.example
+
+# Installed Node.js modules
+node_modules/
+
+# Target build directory for processed, compiled web app
+dist/
+
+test/temp
+.tmp
+
+# SASS intermediate compile files
+*.scssc
+
+# SASS cache directory
+.sass-cache
+
+# temporary editor save files
+*~
+
+# OSX thumnail caches
+.DS_Store
+
+# log files
+*.log
+npm-debug.log*
+
+# JetBrains editor dir
+.idea/
