--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "immer": "^9.0.0"
+    "immer": "^9.0.0",
+    "quill": "^1.3.7"
   },
   "type": "module"
 }
