Additional size icon

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -9,6 +9,11 @@
 			"type": "image/png"
 		},
 		{
+			"src": "images/favicons/apple-touch-icon.png",
+			"sizes": "240x240",
+			"type": "image/png"
+		},
+		{
 			"src": "images/favicons/android-chrome-512x512.png",
 			"sizes": "512x512",
 			"type": "image/png"
