--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   ],
   "license": "MIT",
   "author": "Dean Moses",
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/deanmoses/tacocat-gallery-sveltekit"
+	},
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
@@ -21,7 +25,7 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-vercel": "next",
+    "@sveltejs/adapter-static": "next",
     "@sveltejs/kit": "^1.0.0-next.213",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
