--- a/package.json
+++ b/package.json
@@ -1,49 +1,53 @@
 {
-  "name": "tacocat-gallery-svelte-kit",
-  "version": "0.0.1",
-  "description": "Javascript front end for the tacocat.com photo gallery, built with Sveltekit",
-  "keywords": [
-    "javascript",
-    "typescript",
-    "svelte",
-    "sveltekit"
-  ],
-  "license": "MIT",
-  "author": "Dean Moses",
+	"name": "tacocat-gallery-sveltekit",
+	"version": "0.0.2",
+	"private": true,
+	"description": "Javascript front end for the tacocat.com photo gallery, built with Sveltekit",
+	"keywords": [
+		"javascript",
+		"typescript",
+		"svelte",
+		"sveltekit"
+	],
+	"license": "MIT",
+	"author": "Dean Moses",
 	"repository": {
 		"type": "git",
 		"url": "git://github.com/deanmoses/tacocat-gallery-sveltekit"
 	},
-  "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-static": "next",
-    "@sveltejs/kit": "^1.0.0-next.213",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^3.2.1",
-    "prettier": "^2.4.1",
-    "prettier-plugin-svelte": "^2.4.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.9.4",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
-  },
-  "dependencies": {
-    "idb-keyval": "^6.0.3",
-    "immer": "^9.0.0",
-    "quill": "^1.3.7"
-  },
-  "type": "module"
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"test": "playwright test",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write .",
+		"deploy-staging": "rsync -r -a -v --delete --exclude '.DS_Store' build/ deanmoses@tacocat.com:~/dev-pix.tacocat.com"
+	},
+	"devDependencies": {
+		"@playwright/test": "1.25.0",
+		"@sveltejs/adapter-static": "^1.0.0-next",
+		"@sveltejs/kit": "next",
+		"@typescript-eslint/eslint-plugin": "^5.27.0",
+		"@typescript-eslint/parser": "^5.27.0",
+		"eslint": "^8.16.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"prettier": "^2.6.2",
+		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "^3.44.0",
+		"svelte-check": "^2.7.1",
+		"svelte-preprocess": "^4.10.6",
+		"tslib": "^2.3.1",
+		"typescript": "^4.7.4",
+		"vite": "^3.1.0"
+	},
+	"dependencies": {
+		"idb-keyval": "^6.2.0",
+		"immer": "^9.0.16",
+		"quill": "^1.3.7"
+	},
+	"type": "module"
 }
