--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@playwright/test": "1.29.1",
 		"@sveltejs/adapter-static": "^1.0.0",
 		"@sveltejs/kit": "1.0.1",
+		"@types/quill": "^1.3.10",
 		"@typescript-eslint/eslint-plugin": "^5.47.1",
 		"@typescript-eslint/parser": "^5.47.1",
 		"eslint": "^8.31.0",
