--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
 		"@typescript-eslint/parser": "^6.10.0",
 		"eslint": "^8.53.0",
 		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.35.0",
 		"prettier": "^3.0.3",
 		"prettier-plugin-svelte": "^3.0.3",
-		"svelte": "^3.55.0",
+		"svelte": "^4.2.2",
 		"svelte-check": "^3.5.2",
 		"svelte-preprocess": "^5.0.4",
 		"tslib": "^2.6.2",
