--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,3 @@
 {
-	// `editor.tabSize` and `editor.insertSpaces` are ignored unless this is false
-	"editor.detectIndentation": false,
-
-	// The number of spaces a tab is equal to
-	// This is ignored when `editor.detectIndentation` is on
-	"editor.tabSize": 2,
-
-	// Insert spaces when pressing Tab
-	// This is ignored when `editor.detectIndentation` is on
-	"editor.insertSpaces": false,
-
-	// Format a file on save
-	// A formatter must be available, the file must not be auto-saved and VS Code must not be shutting down
-	"editor.formatOnSave": true,
-	"editor.formatOnType": true,
-
-	// Trim all new lines after the final new line at the end of the file when saving it
-	"files.trimFinalNewlines": true
+    "editor.formatOnSave": true
 }
