--- a/package.json
+++ b/package.json
@@ -1,55 +1,54 @@
 {
-	"name": "tacocat-gallery-sveltekit",
-	"version": "0.0.2",
-	"private": true,
-	"description": "Javascript front end for the tacocat.com photo gallery, built with Sveltekit",
-	"keywords": [
-		"javascript",
-		"typescript",
-		"svelte",
-		"sveltekit"
-	],
-	"license": "MIT",
-	"author": "Dean Moses",
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/deanmoses/tacocat-gallery-sveltekit"
-	},
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"test": "playwright test",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write .",
-		"deploy-staging": "rsync -r -a -v --delete --exclude '.DS_Store' --exclude '.well-known' build/ deanmoses@tacocat.com:~/dev-pix.tacocat.com",
-		"deploy-prod": "rsync -r -a -v --delete --exclude '.DS_Store' --exclude '.well-known' build/ deanmoses@tacocat.com:~/prod-pix.tacocat.com"
-	},
-	"devDependencies": {
-		"@playwright/test": "1.39.0",
-		"@sveltejs/adapter-static": "^2.0.3",
-		"@sveltejs/kit": "1.27.3",
-		"@types/quill": "^2.0.14",
-		"@typescript-eslint/eslint-plugin": "^6.10.0",
-		"@typescript-eslint/parser": "^6.10.0",
-		"eslint": "^8.53.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte": "^2.35.0",
-		"prettier": "^3.0.3",
-		"prettier-plugin-svelte": "^3.0.3",
-		"svelte": "^4.2.2",
-		"svelte-check": "^3.5.2",
-		"svelte-preprocess": "^5.0.4",
-		"tslib": "^2.6.2",
-		"typescript": "^5.2.2",
-		"vite": "^4.5.0"
-	},
-	"dependencies": {
-		"idb-keyval": "^6.2.1",
-		"immer": "^10.0.3",
-		"quill": "^1.3.7"
-	},
-	"type": "module"
+    "name": "tacocat-gallery-sveltekit",
+    "version": "0.0.2",
+    "private": true,
+    "description": "Javascript front end for the tacocat.com photo gallery, built with Sveltekit",
+    "keywords": [
+        "javascript",
+        "typescript",
+        "svelte",
+        "sveltekit"
+    ],
+    "license": "MIT",
+    "author": "Dean Moses",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/deanmoses/tacocat-gallery-sveltekit"
+    },
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "test": "playwright test",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "deploy-staging": "rsync -r -a -v --delete --exclude '.DS_Store' --exclude '.well-known' build/ deanmoses@tacocat.com:~/dev-pix.tacocat.com",
+        "deploy-prod": "rsync -r -a -v --delete --exclude '.DS_Store' --exclude '.well-known' build/ deanmoses@tacocat.com:~/prod-pix.tacocat.com"
+    },
+    "devDependencies": {
+        "@playwright/test": "1.39.0",
+        "@sveltejs/adapter-static": "^2.0.3",
+        "@sveltejs/kit": "1.27.3",
+        "@types/quill": "^2.0.14",
+        "@typescript-eslint/eslint-plugin": "^6.10.0",
+        "@typescript-eslint/parser": "^6.10.0",
+        "eslint": "^8.53.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.1",
+        "eslint-plugin-svelte": "^2.35.0",
+        "prettier": "^3.0.3",
+        "prettier-plugin-svelte": "^3.0.3",
+        "svelte": "^4.2.2",
+        "svelte-check": "^3.5.2",
+        "svelte-preprocess": "^5.0.4",
+        "tslib": "^2.6.2",
+        "typescript": "^5.2.2",
+        "vite": "^4.5.0"
+    },
+    "dependencies": {
+        "idb-keyval": "^6.2.1",
+        "immer": "^10.0.3",
+        "quill": "^1.3.7"
+    },
+    "type": "module"
 }
