--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
         "@aws-sdk/lib-storage": "^3.451.0",
         "idb-keyval": "^6.2.1",
         "immer": "^10.0.3",
-        "quill": "^1.3.7"
+        "quill": "^1.3.7",
+        "svelte-easy-crop": "^2.0.1"
     },
     "type": "module"
 }
