--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@types/quill": "^2.0.14",
         "@typescript-eslint/eslint-plugin": "^6.11.0",
         "@typescript-eslint/parser": "^6.11.0",
+        "@zerodevx/svelte-toast": "^0.9.5",
         "eslint": "^8.53.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.1",
