--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "prettier --plugin-search-dir . --check . && eslint .",
         "format": "prettier --plugin-search-dir . --write .",
-        "deploy-staging": "rsync -r -a -v --delete --exclude '.DS_Store' --exclude '.well-known' build/ deanmoses@tacocat.com:~/dev-pix.tacocat.com",
-        "deploy-prod": "rsync -r -a -v --delete --exclude '.DS_Store' --exclude '.well-known' build/ deanmoses@tacocat.com:~/prod-pix.tacocat.com"
+        "deploy-staging": "./deploy_staging.sh",
+        "deploy-prod": "TODO DEPLOY TO AWS INSTEAD OF DREAMHOST rsync -r -a -v --delete --exclude '.DS_Store' --exclude '.well-known' build/ deanmoses@tacocat.com:~/prod-pix.tacocat.com"
     },
     "devDependencies": {
         "@playwright/test": "1.39.0",
