--- a/package.json
+++ b/package.json
@@ -56,5 +56,9 @@
         "quill": "^1.3.7",
         "svelte-easy-crop": "^2.0.1"
     },
+    "engineStrict": true,
+    "engines": {
+        "node": ">=18.0.0"
+    },
     "type": "module"
 }
