--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "scripts": {
         "dev": "vite dev",
+        "build-debug": "vite build --mode development --sourcemap true --minify false",
         "build": "vite build",
         "preview": "vite preview",
         "test": "playwright test",
@@ -49,8 +50,6 @@
         "vite": "^4.5.0"
     },
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.470.0",
-        "@aws-sdk/credential-providers": "^3.470.0",
         "idb-keyval": "^6.2.1",
         "immer": "^10.0.3",
         "quill": "^1.3.7",
