--- a/package.json
+++ b/package.json
@@ -29,16 +29,17 @@
         "deploy-prod": "./deploy_prod.sh"
     },
     "devDependencies": {
+        "@eslint/js": "^9.17.0",
         "@playwright/test": "1.49.1",
         "@sveltejs/adapter-static": "^3.0.1",
         "@sveltejs/kit": "^2.0.6",
-        "@typescript-eslint/eslint-plugin": "^6.16.0",
-        "@typescript-eslint/parser": "^6.16.0",
+        "@typescript-eslint/eslint-plugin": "^8.19.0",
+        "@typescript-eslint/parser": "^8.19.0",
         "@zerodevx/svelte-toast": "^0.9.6",
-        "eslint": "^8.56.0",
+        "eslint": "^9.17.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
-        "eslint-plugin-svelte": "^2.35.1",
+        "eslint-plugin-svelte": "^2.46.1",
         "prettier": "^3.4.2",
         "prettier-plugin-svelte": "^3.3.2",
         "svelte": "^4.2.8",
