--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
         "build-debug": "vite build --mode development --sourcemap true --minify false",
         "build": "vite build",
         "preview": "vite preview",
-        "test": "playwright test",
+        "test:unit": "vitest run",
+        "test:unit:watch": "vitest",
+        "test:e2e": "playwright test",
+        "test": "npm run test:unit && npm run test:e2e",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "prettier --plugin-search-dir . --check . && eslint .",
@@ -33,6 +36,7 @@
         "@playwright/test": "1.50.1",
         "@sveltejs/adapter-static": "^3.0.8",
         "@sveltejs/kit": "^2.17.2",
+        "@testing-library/svelte": "^5.2.8",
         "@typescript-eslint/eslint-plugin": "^8.24.1",
         "@typescript-eslint/parser": "^8.24.1",
         "@zerodevx/svelte-toast": "^0.9.6",
@@ -40,6 +44,7 @@
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-prettier": "^5.2.3",
         "eslint-plugin-svelte": "^2.46.1",
+        "jsdom": "^26.1.0",
         "prettier": "^3.5.1",
         "prettier-plugin-svelte": "^3.3.3",
         "svelte": "^5.20.2",
@@ -49,7 +54,8 @@
         "tslib": "^2.8.1",
         "typescript": "^5.7.3",
         "typescript-eslint": "^8.24.1",
-        "vite": "^6.1.1"
+        "vite": "^6.1.1",
+        "vitest": "^3.2.3"
     },
     "dependencies": {
         "idb-keyval": "^6.2.1",
