--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "tslib": "^2.8.1",
         "typescript": "^5.8.3",
         "vite": "^6.3.5",
+        "vite-plugin-devtools-json": "^0.2.0",
         "vitest": "^3.2.3"
     },
     "dependencies": {
