Make VS Code and Cursor use the project's TypeScript
It was telling me valid files were invalid, because I was using a newer version of TS in my project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "typescript.tsdk": "node_modules/typescript/lib",
+    "typescript.enablePromptUseWorkspaceTsdk": true,
+    "cursor.typescript.tsdk": "node_modules/typescript/lib"
 }
