--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
         "test": "npm run test:unit && npm run test:e2e",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-        "lint": "prettier --plugin-search-dir . --check . && eslint .",
-        "format": "prettier --plugin-search-dir . --write .",
+        "lint": "prettier . --check . && eslint .",
+        "format": "prettier . --write .",
         "deploy-staging": "./deploy_staging.sh",
         "deploy-prod": "./deploy_prod.sh"
     },
@@ -53,6 +53,7 @@
         "svelte-preprocess": "^6.0.3",
         "tslib": "^2.8.1",
         "typescript": "^5.8.3",
+        "typescript-eslint": "^8.34.0",
         "vite": "^6.3.5",
         "vite-plugin-devtools-json": "^0.2.0",
         "vitest": "^3.2.3"
