--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "preview": "vite preview",
         "test:unit": "vitest run",
         "test:unit:watch": "vitest",
+        "test:coverage": "vitest run --coverage",
         "test:e2e": "playwright test",
         "test": "npm run test:unit && npm run test:e2e",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -39,6 +40,7 @@
         "@testing-library/svelte": "^5.2.8",
         "@typescript-eslint/eslint-plugin": "^8.34.1",
         "@typescript-eslint/parser": "^8.34.1",
+        "@vitest/coverage-v8": "^3.2.3",
         "@zerodevx/svelte-toast": "^0.9.6",
         "eslint": "^9.29.0",
         "eslint-config-prettier": "^10.1.5",
