More AI-friendly docs

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "prettier . --check . && eslint .",
+        "lint:fix": "prettier . --write . && eslint . --fix",
         "format": "prettier . --write .",
         "deploy-staging": "./deploy_staging.sh",
         "deploy-prod": "./deploy_prod.sh"
